[gd_scene load_steps=14 format=3 uid="uid://crkseldnn7m4"]

[ext_resource type="Script" uid="uid://cxjrq552pe63p" path="res://ui_scenes/options/options_menu.gd" id="1_6t7st"]
[ext_resource type="Texture2D" uid="uid://csibj827o7h0h" path="res://ui_scenes/mainMenu/saveSlot/rect.png" id="1_hp6kx"]
[ext_resource type="PackedScene" uid="uid://d0j06gpiq8jxo" path="res://ui_scenes/mainMenu/textbutton/text_button.tscn" id="2_6rvf4"]
[ext_resource type="Texture2D" uid="uid://dlexgb4yfmn38" path="res://items/food/birdMeat.png" id="4_p3wdg"]

[sub_resource type="LabelSettings" id="LabelSettings_21cv2"]
font_size = 32
font_color = Color(0.368627, 0.368627, 0.368627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vrhq"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slyn1"]
bg_color = Color(0.658824, 0.658824, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2px4"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_givww"]
content_margin_left = 1.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0.176471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_kajlr"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_8vrhq")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_slyn1")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_y2px4")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_givww")
VScrollBar/styles/scroll_focus = null
VSlider/constants/center_grabber = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfi1e"]
content_margin_top = 8.0
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fldro"]
content_margin_top = 8.0
bg_color = Color(1, 0.784314, 0.333333, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lk7d"]
content_margin_top = 8.0
bg_color = Color(1, 0.631373, 0.333333, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="optionsMenu" type="Node2D"]
script = ExtResource("1_6t7st")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 293.0
mouse_filter = 0
texture = ExtResource("1_hp6kx")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="title" type="Label" parent="."]
offset_left = 9.0
offset_top = 11.0
offset_right = 189.0
offset_bottom = 43.0
text = "options"
label_settings = SubResource("LabelSettings_21cv2")
horizontal_alignment = 1

[node name="done" parent="." instance=ExtResource("2_6rvf4")]
offset_left = 170.0
offset_top = 267.0
offset_right = 186.0
offset_bottom = 284.0
buttonText = "OK"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 9.0
offset_top = 49.0
offset_right = 186.0
offset_bottom = 261.0
theme = SubResource("Theme_kajlr")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="g" type="ColorRect" parent="ScrollContainer"]
custom_minimum_size = Vector2(3, 328.53)
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="buttons" type="Node2D" parent="ScrollContainer/g"]

[node name="dropshadow" parent="ScrollContainer/g/buttons" instance=ExtResource("2_6rvf4")]
offset_left = 8.0
offset_top = 175.0
offset_right = 160.0
offset_bottom = 192.0
tooltip_text = "this can help with performance"
buttonText = "show drop shadow: true"

[node name="autosaving" parent="ScrollContainer/g/buttons" instance=ExtResource("2_6rvf4")]
offset_left = 8.0
offset_top = 203.0
offset_right = 115.0
offset_bottom = 220.0
tooltip_text = "saves world every 3 minutes"
buttonText = "autosaving: true"

[node name="fullscreen" parent="ScrollContainer/g/buttons" instance=ExtResource("2_6rvf4")]
offset_left = 8.0
offset_top = 148.0
offset_right = 115.0
offset_bottom = 165.0
buttonText = "toggle fullscreen"

[node name="sfxslider" type="Node2D" parent="ScrollContainer/g/buttons"]
position = Vector2(10, 18)

[node name="sfx" parent="ScrollContainer/g/buttons/sfxslider" instance=ExtResource("2_6rvf4")]
offset_right = 21.0
buttonText = "sfx"

[node name="sfxslide" type="HSlider" parent="ScrollContainer/g/buttons/sfxslider"]
offset_left = -1.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -2075
theme_override_icons/grabber = ExtResource("4_p3wdg")
theme_override_icons/grabber_highlight = ExtResource("4_p3wdg")
theme_override_icons/grabber_disabled = ExtResource("4_p3wdg")
theme_override_icons/tick = ExtResource("4_p3wdg")
theme_override_styles/slider = SubResource("StyleBoxFlat_bfi1e")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_fldro")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3lk7d")
max_value = 3.0
step = 0.01
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="ScrollContainer/g/buttons/sfxslider"]
modulate = Color(0.368627, 0.368627, 0.368627, 1)
offset_left = 85.0
offset_top = 1.0
offset_right = 151.0
offset_bottom = 17.0
text = "100"
horizontal_alignment = 2

[node name="musicslider" type="Node2D" parent="ScrollContainer/g/buttons"]
position = Vector2(10, 58)

[node name="music" parent="ScrollContainer/g/buttons/musicslider" instance=ExtResource("2_6rvf4")]
offset_right = 35.0
buttonText = "music"

[node name="musslide" type="HSlider" parent="ScrollContainer/g/buttons/musicslider"]
offset_left = -1.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -2075
theme_override_icons/grabber = ExtResource("4_p3wdg")
theme_override_icons/grabber_highlight = ExtResource("4_p3wdg")
theme_override_icons/grabber_disabled = ExtResource("4_p3wdg")
theme_override_icons/tick = ExtResource("4_p3wdg")
theme_override_styles/slider = SubResource("StyleBoxFlat_bfi1e")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_fldro")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3lk7d")
max_value = 3.0
step = 0.01
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="ScrollContainer/g/buttons/musicslider"]
modulate = Color(0.368627, 0.368627, 0.368627, 1)
offset_left = 85.0
offset_top = 1.0
offset_right = 150.0
offset_bottom = 17.0
text = "100"
horizontal_alignment = 2

[node name="ambientslider" type="Node2D" parent="ScrollContainer/g/buttons"]
position = Vector2(10, 102)

[node name="ambient" parent="ScrollContainer/g/buttons/ambientslider" instance=ExtResource("2_6rvf4")]
offset_right = 51.0
buttonText = "ambient"

[node name="ambslide" type="HSlider" parent="ScrollContainer/g/buttons/ambientslider"]
offset_left = -1.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -2075
theme_override_icons/grabber = ExtResource("4_p3wdg")
theme_override_icons/grabber_highlight = ExtResource("4_p3wdg")
theme_override_icons/grabber_disabled = ExtResource("4_p3wdg")
theme_override_icons/tick = ExtResource("4_p3wdg")
theme_override_styles/slider = SubResource("StyleBoxFlat_bfi1e")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_fldro")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3lk7d")
max_value = 3.0
step = 0.01
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="ScrollContainer/g/buttons/ambientslider"]
modulate = Color(0.368627, 0.368627, 0.368627, 1)
offset_left = 85.0
offset_top = 1.0
offset_right = 151.0
offset_bottom = 17.0
text = "100"
horizontal_alignment = 2

[node name="rotateSlider" type="Node2D" parent="ScrollContainer/g/buttons"]
position = Vector2(9, 232)

[node name="rotation" parent="ScrollContainer/g/buttons/rotateSlider" instance=ExtResource("2_6rvf4")]
offset_right = 80.0
buttonText = "camera ease"

[node name="rotslide" type="HSlider" parent="ScrollContainer/g/buttons/rotateSlider"]
offset_left = -1.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -2075
theme_override_icons/grabber = ExtResource("4_p3wdg")
theme_override_icons/grabber_highlight = ExtResource("4_p3wdg")
theme_override_icons/grabber_disabled = ExtResource("4_p3wdg")
theme_override_icons/tick = ExtResource("4_p3wdg")
theme_override_styles/slider = SubResource("StyleBoxFlat_bfi1e")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_fldro")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3lk7d")
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="ScrollContainer/g/buttons/rotateSlider"]
modulate = Color(0.368627, 0.368627, 0.368627, 1)
offset_left = 85.0
offset_top = 1.0
offset_right = 150.0
offset_bottom = 17.0
text = "normal"
horizontal_alignment = 2

[node name="maxfps" type="Node2D" parent="ScrollContainer/g/buttons"]
position = Vector2(9, 275)

[node name="maxfps" parent="ScrollContainer/g/buttons/maxfps" instance=ExtResource("2_6rvf4")]
offset_right = 52.0
tooltip_text = "experimental. may encounter bugs."
buttonText = "max fps"

[node name="maxfpsslider" type="HSlider" parent="ScrollContainer/g/buttons/maxfps"]
offset_left = -1.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_constants/center_grabber = 1
theme_override_constants/grabber_offset = -2075
theme_override_icons/grabber = ExtResource("4_p3wdg")
theme_override_icons/grabber_highlight = ExtResource("4_p3wdg")
theme_override_icons/grabber_disabled = ExtResource("4_p3wdg")
theme_override_icons/tick = ExtResource("4_p3wdg")
theme_override_styles/slider = SubResource("StyleBoxFlat_bfi1e")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_fldro")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3lk7d")
max_value = 300.0
value = 60.0
scrollable = false

[node name="maxfpslabel" type="Label" parent="ScrollContainer/g/buttons/maxfps"]
modulate = Color(0.368627, 0.368627, 0.368627, 1)
offset_left = 85.0
offset_top = 1.0
offset_right = 150.0
offset_bottom = 17.0
text = "60"
horizontal_alignment = 2

[node name="vsync" parent="ScrollContainer/g/buttons/maxfps" instance=ExtResource("2_6rvf4")]
offset_left = -1.0
offset_top = 34.0
offset_right = 93.0
offset_bottom = 51.0
buttonText = "vsync: enabled"

[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/dropshadow" to="." method="_on_dropshadow_pressed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/autosaving" to="." method="_on_autosaving_pressed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/sfxslider/sfx" to="." method="_on_sfx_pressed"]
[connection signal="value_changed" from="ScrollContainer/g/buttons/sfxslider/sfxslide" to="." method="_on_sfxslide_value_changed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/musicslider/music" to="." method="_on_music_pressed"]
[connection signal="value_changed" from="ScrollContainer/g/buttons/musicslider/musslide" to="." method="_on_musslide_value_changed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/ambientslider/ambient" to="." method="_on_ambient_pressed"]
[connection signal="value_changed" from="ScrollContainer/g/buttons/ambientslider/ambslide" to="." method="_on_ambslide_value_changed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/rotateSlider/rotation" to="." method="_on_rotation_pressed"]
[connection signal="value_changed" from="ScrollContainer/g/buttons/rotateSlider/rotslide" to="." method="_on_rotslide_value_changed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/maxfps/maxfps" to="." method="_on_maxfps_pressed"]
[connection signal="value_changed" from="ScrollContainer/g/buttons/maxfps/maxfpsslider" to="." method="_on_maxfpsslider_value_changed"]
[connection signal="pressed" from="ScrollContainer/g/buttons/maxfps/vsync" to="." method="_on_vsync_pressed"]
